--- a/styles/calculator/index.module.css
+++ b/styles/calculator/index.module.css
@@ -1,7 +1,16 @@
+/*
+* Prefixed by:
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 100 version
+*/
+
 @media screen and (min-width:1900px) {
     div.main__calc {
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
     }
     div.main__calculator {
@@ -9,12 +18,16 @@
         margin-right:32px;
         -webkit-box-ordinal-group:2;
             -ms-flex-order:1;
+                -webkit-order:1;
+                   -moz-box-ordinal-group:2;
                 order:1;
     }
     div.main__result {
         width: 50%;
         -webkit-box-ordinal-group:3;
             -ms-flex-order:2;
+                -webkit-order:2;
+                   -moz-box-ordinal-group:3;
                 order:2;
     }
     div.main__calculator_m {
@@ -26,6 +39,8 @@
     div.main__calc {
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
     }
     div.main__calculator {
@@ -33,12 +48,16 @@
         margin-right:32px;
         -webkit-box-ordinal-group:2;
             -ms-flex-order:1;
+                -webkit-order:1;
+                   -moz-box-ordinal-group:2;
                 order:1;
     }
     div.main__result {
         width: 50%;
         -webkit-box-ordinal-group:3;
             -ms-flex-order:2;
+                -webkit-order:2;
+                   -moz-box-ordinal-group:3;
                 order:2;
     }
     div.main__calculator_m {
@@ -50,6 +69,8 @@
     div.main__calc {
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
     }
     div.main__calculator {
@@ -57,12 +78,16 @@
         margin-right:32px;
         -webkit-box-ordinal-group:2;
             -ms-flex-order:1;
+                -webkit-order:1;
+                   -moz-box-ordinal-group:2;
                 order:1;
     }
     div.main__result {
         width: 50%;
         -webkit-box-ordinal-group:3;
             -ms-flex-order:2;
+                -webkit-order:2;
+                   -moz-box-ordinal-group:3;
                 order:2;
     }
     div.main__calculator_m {
@@ -74,14 +99,19 @@
     div.main__calc {
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
+            -webkit-flex-wrap: wrap;
+                flex-wrap: wrap;
     }
     div.main__calculator {
         width: 100%;
         -webkit-box-ordinal-group:2;
             -ms-flex-order:1;
+                -webkit-order:1;
+                   -moz-box-ordinal-group:2;
                 order:1;
         border: 1px solid;
     }
@@ -89,6 +119,8 @@
         width: 100%;
         -webkit-box-ordinal-group:3;
             -ms-flex-order:2;
+                -webkit-order:2;
+                   -moz-box-ordinal-group:3;
                 order:2;
     }
     div.main__calculator_m {
@@ -99,38 +131,60 @@
 div.main__calculator {
     display: -webkit-box;
     display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
+            -webkit-align-items: center;
+               -moz-box-align: center;
             align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
+            -webkit-justify-content: center;
+               -moz-box-pack: center;
             justify-content: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
+            -webkit-flex-direction: column;
+               -moz-box-orient: vertical;
+               -moz-box-direction: normal;
             flex-direction: column;
     border: 1px solid var(--border-color);
-    border-radius: 24px;
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
     margin-top:32px;
     padding-bottom:48px;
 }
 div.main__result {
     display: -webkit-box;
     display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
+            -webkit-align-items: center;
+               -moz-box-align: center;
             align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
+            -webkit-justify-content: center;
+               -moz-box-pack: center;
             justify-content: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
+            -webkit-flex-direction: column;
+               -moz-box-orient: vertical;
+               -moz-box-direction: normal;
             flex-direction: column;
     border: 1px solid var(--border-color);
-    border-radius: 24px;
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
     margin-top:32px;
     padding:48px 0;
 }
@@ -145,10 +199,16 @@ div.main__calculator_module {
     height: 60px;
     display: -webkit-box;
     display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
-    border-radius: 24px;
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
     -webkit-box-align: center;
         -ms-flex-align: center;
+            -webkit-align-items: center;
+               -moz-box-align: center;
             align-items: center;
     background-color: var(--block-color);
 }
@@ -162,12 +222,18 @@ div.main__calculator_module_pic {
 div.main__calculator_module_close {
     display: -webkit-box;
     display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
+            -webkit-align-items: center;
+               -moz-box-align: center;
             align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
+            -webkit-justify-content: center;
+               -moz-box-pack: center;
             justify-content: center;
     width:150px;
     height:60px;
@@ -216,24 +282,36 @@ div.module_result_block {
     width:87.5%;
     height:70px;
     background-color: var(--block-color);
-    border-radius: 24px;
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
     display: -webkit-box;
     display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
+            -webkit-align-items: center;
+               -moz-box-align: center;
             align-items: center;
     margin: 0 auto;
 }
 div.module_result_block_without_back {
     width:87.5%;
     height:70px;
-    border-radius: 24px;
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
     display: -webkit-box;
     display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
+            -webkit-align-items: center;
+               -moz-box-align: center;
             align-items: center;
     margin: 0 auto;
 }
@@ -260,15 +338,20 @@ i.show {
 div.nav__block_menu {
     display: -webkit-box;
     display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+        -webkit-flex-wrap: wrap;
+            flex-wrap: wrap;
 }
 div.nav__block_menu > a {
     margin:32px 16px 0 0;
     padding:12px 24px;
     font-size:16px;
-    border-radius: 200px;
+    -webkit-border-radius: 200px;
+       -moz-border-radius: 200px;
+            border-radius: 200px;
     cursor: pointer;
     display: block;
     text-align: center;
