--- a/styles/constructor/index.module.css
+++ b/styles/constructor/index.module.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by:
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 100 version
+*/
+
 div.main__module_row {
     margin:32px 0;
     display: -ms-grid;
@@ -8,31 +15,44 @@ div.main__module_row {
 div.main__module_row_block {
     display: -webkit-box;
     display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
     cursor: pointer;
 }
 div.main__module_row_block_img {
     width:60px;
     height:60px;
-    border-radius: 24px;
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
     margin-right: 16px;
     position: relative;
 }
 img.main__module_row_block_pic {
     width:60px;
     height:60px;
-    border-radius: 24px;
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
 }
 div.main__module_row_block_f  {
     display: -webkit-box;
     display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
+            -webkit-flex-direction: column;
+               -moz-box-orient: vertical;
+               -moz-box-direction: normal;
             flex-direction: column;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
+            -webkit-justify-content: center;
+               -moz-box-pack: center;
             justify-content: center;
 }
 p.main__module_row_block_f_p {
