--- a/styles/health/rh-factor-in-pregnancy-planning/index.module.css
+++ b/styles/health/rh-factor-in-pregnancy-planning/index.module.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by:
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 100 version
+*/
+
 .head {
     text-align: center;
     margin:32px 0 8px 0;
@@ -6,20 +13,50 @@
     text-align: center
 }
 div.comparitive__block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    -ms-flex-wrap: wrap;
+        -webkit-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            -webkit-justify-content: space-evenly;
+               -moz-box-pack: space-evenly;
+            justify-content: space-evenly;
     margin-top:32px;
 }
 div.comparitive__block_row {
-    width:300px;
-    height:300px;
-    border-radius:24px;
+    width:320px;
+    height:320px;
+    -webkit-border-radius:24px;
+       -moz-border-radius:24px;
+            border-radius:24px;
     background-color: var(--block-color);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            -webkit-flex-direction: column;
+               -moz-box-orient: vertical;
+               -moz-box-direction: normal;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            -webkit-justify-content: center;
+               -moz-box-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            -webkit-align-items: center;
+               -moz-box-align: center;
+            align-items: center;
     margin:32px 0 16px 0;
 }
 div.comparitive__block_row_image {
@@ -27,20 +64,31 @@ div.comparitive__block_row_image {
     height:120px;
     position: relative;
     margin-left:-20px;
+    margin-top:16px;
 }
 div.comparitive__block_row_flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            -webkit-align-items: center;
+               -moz-box-align: center;
+            align-items: center;
 }
 div.comparitive__block_row_flex >h1 {
     margin-right:8px;
 }
 select.comparitive__block_row_select {
-    margin:16px 8px;
-    padding:0 16px;
-    width:60px;
+    margin:24px 8px;
+    padding:0 30px;
+    width:80px;
     height:60px;
-    border-radius:24px;
+    -webkit-border-radius:24px;
+       -moz-border-radius:24px;
+            border-radius:24px;
     background: url(/img/arrow_drop_down.svg) no-repeat 95% 50% var(--red_back);
     cursor: pointer;
     font-size:24px;
@@ -62,9 +110,19 @@ div.compare_row {
 div.compare_block {
     width:100%;
     height:80px;
-    border-radius: 24px;
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: -moz-box;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            -webkit-align-items: center;
+               -moz-box-align: center;
+            align-items: center;
     margin:0 auto
 }
 div.compare_block_emoji {
@@ -73,5 +131,7 @@ div.compare_block_emoji {
     position: relative;
     margin: 0 16px;
     background-color: var(--block-color);
-    border-radius: 24px;
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
 }
