--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -1,42 +1,68 @@
+/*
+* Prefixed by:
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 100 version
+*/
+
 @media screen and (min-width:1900px) {
     div.main__menu_nav {
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                   -moz-box-pack: center;
                 justify-content: center;
         background-color: var(--nav_block);
         margin:0 25px;
         padding: 22px 0;
         width:1880px;
-        border-radius: 24px;
+        -webkit-border-radius: 24px;
+           -moz-border-radius: 24px;
+                border-radius: 24px;
         margin: 0 auto;
     }
     div.main__menu_nav_blocks {
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         margin:0 11px;
     }
     div.main__menu_nav_block {
         width:110px;
         height:110px;
-        border-radius: 24px;
+        -webkit-border-radius: 24px;
+           -moz-border-radius: 24px;
+                border-radius: 24px;
         margin: 0 11px;
         cursor: pointer;
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
+                -webkit-flex-direction: column;
+                   -moz-box-orient: vertical;
+                   -moz-box-direction: normal;
                 flex-direction: column;
         -webkit-box-align: center;
             -ms-flex-align: center;
+                -webkit-align-items: center;
+                   -moz-box-align: center;
                 align-items: center;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                   -moz-box-pack: center;
                 justify-content: center;
     }
     span.nav_header {
@@ -50,14 +76,22 @@
         height:60px;
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         -webkit-box-align: center;
             -ms-flex-align: center;
+                -webkit-align-items: center;
+                   -moz-box-align: center;
                 align-items: center;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                   -moz-box-pack: center;
                 justify-content: center;
-        border-radius: 21px;
+        -webkit-border-radius: 21px;
+           -moz-border-radius: 21px;
+                border-radius: 21px;
     }
     div.main__menu_nav_block_image_pic {
         width:36px;
@@ -70,42 +104,63 @@
     div.main__menu_nav {
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                   -moz-box-pack: center;
                 justify-content: center;
         background-color: var(--nav_block);
         margin:0 25px;
         padding: 22px 0;
+        width:-webkit-calc(100%-100px);
+        width:-moz-calc(100%-100px);
         width:calc(100%-100px);
-        border-radius: 24px;
+        -webkit-border-radius: 24px;
+           -moz-border-radius: 24px;
+                border-radius: 24px;
         -webkit-backdrop-filter: blur(80px);
                 backdrop-filter: blur(80px);
     }
     div.main__menu_nav_blocks {
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         margin:0 11px;
     }
     div.main__menu_nav_block {
         width:110px;
         height:110px;
-        border-radius: 24px;
+        -webkit-border-radius: 24px;
+           -moz-border-radius: 24px;
+                border-radius: 24px;
         margin: 0 11px;
         cursor: pointer;
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
+                -webkit-flex-direction: column;
+                   -moz-box-orient: vertical;
+                   -moz-box-direction: normal;
                 flex-direction: column;
         -webkit-box-align: center;
             -ms-flex-align: center;
+                -webkit-align-items: center;
+                   -moz-box-align: center;
                 align-items: center;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                   -moz-box-pack: center;
                 justify-content: center;
     }
     span.nav_header {
@@ -119,14 +174,22 @@
         height:60px;
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         -webkit-box-align: center;
             -ms-flex-align: center;
+                -webkit-align-items: center;
+                   -moz-box-align: center;
                 align-items: center;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                   -moz-box-pack: center;
                 justify-content: center;
-        border-radius: 21px;
+        -webkit-border-radius: 21px;
+           -moz-border-radius: 21px;
+                border-radius: 21px;
     }
     div.main__menu_nav_block_image_pic {
         width:36px;
@@ -140,35 +203,52 @@
         background-color: var(--nav_block);
         margin:0 12px;
         padding: 22px 0;
+        width:-webkit-calc(100%-22px);
+        width:-moz-calc(100%-22px);
         width:calc(100%-22px);
-        border-radius: 24px;
+        -webkit-border-radius: 24px;
+           -moz-border-radius: 24px;
+                border-radius: 24px;
         overflow-x: auto;
         overflow-y: hidden;
     }
     div.main__menu_nav_blocks {
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         margin:0 11px;
     }
     div.main__menu_nav_block {
         width:110px;
         height:110px;
-        border-radius: 24px;
+        -webkit-border-radius: 24px;
+           -moz-border-radius: 24px;
+                border-radius: 24px;
         margin: 0 11px;
         cursor: pointer;
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
+                -webkit-flex-direction: column;
+                   -moz-box-orient: vertical;
+                   -moz-box-direction: normal;
                 flex-direction: column;
         -webkit-box-align: center;
             -ms-flex-align: center;
+                -webkit-align-items: center;
+                   -moz-box-align: center;
                 align-items: center;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                   -moz-box-pack: center;
                 justify-content: center;
     }
     span.nav_header {
@@ -182,14 +262,22 @@
         height:60px;
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         -webkit-box-align: center;
             -ms-flex-align: center;
+                -webkit-align-items: center;
+                   -moz-box-align: center;
                 align-items: center;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                   -moz-box-pack: center;
                 justify-content: center;
-        border-radius: 21px;
+        -webkit-border-radius: 21px;
+           -moz-border-radius: 21px;
+                border-radius: 21px;
     }
     div.main__menu_nav_block_image_pic {
         width:36px;
@@ -200,12 +288,16 @@
 @media (min-width:1px) and (max-width:600px) {
     div.main__menu_nav {
         background-color: transparent;
+        width:-webkit-calc(100%-22px);
+        width:-moz-calc(100%-22px);
         width:calc(100%-22px);
         padding:16px 0;
         overflow-x: auto;
         overflow-y: hidden;
         background-color: var(--nav_block);
-        border-radius: 24px;
+        -webkit-border-radius: 24px;
+           -moz-border-radius: 24px;
+                border-radius: 24px;
         margin: 0;
     }
     div.main__menu_nav_blocks {
@@ -213,9 +305,13 @@
         display: grid;
         -webkit-box-align: center;
             -ms-flex-align: center;
+                -webkit-align-items: center;
+                   -moz-box-align: center;
                 align-items: center;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                   -moz-box-pack: center;
                 justify-content: center;
         -ms-grid-columns: 24.5vw 0px 24.5vw 0px 24.5vw 0px 24.5vw;
         grid-template-columns: repeat(4,24.5vw);
@@ -225,21 +321,32 @@
     div.main__menu_nav_block {
         width:90%;
         height:100px;
-        border-radius: 24px;
+        -webkit-border-radius: 24px;
+           -moz-border-radius: 24px;
+                border-radius: 24px;
         margin: 0 4px;
         cursor: pointer;
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
+                -webkit-flex-direction: column;
+                   -moz-box-orient: vertical;
+                   -moz-box-direction: normal;
                 flex-direction: column;
         -webkit-box-align: center;
             -ms-flex-align: center;
+                -webkit-align-items: center;
+                   -moz-box-align: center;
                 align-items: center;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                   -moz-box-pack: center;
                 justify-content: center; 
     }
     span.nav_header {
@@ -254,14 +361,22 @@
         height:60px;
         display: -webkit-box;
         display: -ms-flexbox;
+        display: -webkit-flex;
+        display: -moz-box;
         display: flex;
         -webkit-box-align: center;
             -ms-flex-align: center;
+                -webkit-align-items: center;
+                   -moz-box-align: center;
                 align-items: center;
         -webkit-box-pack: center;
             -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                   -moz-box-pack: center;
                 justify-content: center;
-        border-radius: 24px;
+        -webkit-border-radius: 24px;
+           -moz-border-radius: 24px;
+                border-radius: 24px;
     }
     div.main__menu_nav_block_image_pic {
         width:36px;
@@ -284,18 +399,23 @@ div.main__index_block {
     width:160px;
     height:160px;
     background-color: var(--nav_menu_c);
-    border-radius: 24px;
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
     margin:16px 0 8px 0;
 }
 div.main__index_block_pic {
     width:160px;
     height:160px;
     position: relative;
-    border-radius: 24px;
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
 }
 img.main__index_block_img {
     width:160px;
     height:160px;
-    border-radius: 24px;
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
 }
-
