--- a/styles/calculator/index.module.css
+++ b/styles/calculator/index.module.css
@@ -246,8 +246,10 @@ div.main__calculator_module_close_img {
 }
 select.main__calculator_module_select {
     cursor: pointer;
-    width:70%;
+    width:100%;
+    height: 60px;
     font-size:16px;
+    border-radius: 0 24px 24px 0;
     background: url(/img/top.svg) no-repeat 95% 50% var(--block-color);
 }
 input.main__calculator_module_input {
@@ -266,8 +268,8 @@ div.module_result_row {
     display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 20px;
-    gap: 20px;
+    grid-gap: 24px;
+    gap: 24px;
 }
 div.module_result_row_block {
     width:100%;
