--- a/styles/calculator/index.module.css
+++ b/styles/calculator/index.module.css
@@ -358,3 +358,42 @@ div.nav__block_menu > a {
     display: block;
     text-align: center;
 }
+div.calc__table {
+    margin-top:32px;
+    width:100%;
+    border-radius: 32px;
+    border: 1px solid var(--border-color);
+}
+div.calc__table_header {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    height: 80px;
+    margin:16px 16px;
+}
+div.calc__table_header>div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+div.calc__table_header>div>h5 {
+    text-align: center;
+}
+div.calc__table_content {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    height: 80px;
+    margin:16px 16px;
+    border-radius: 24px;
+}
+div.calc__table_content>div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.head {
+    text-align: center;
+    margin:64px 0 8px 0;
+}
+.headers {
+    text-align: center
+}
