--- a/styles/globals.css
+++ b/styles/globals.css
@@ -258,6 +258,7 @@ p.nav > a {
       --top-icon:url(../public/img/top-night.svg);
       --menu-icon:url(../public/img/menu-night.svg);
       --logo:url(../public/img/logo-night.webp);
+      --back:hsl(0, 0%, 0%);
       --background-color:hsla(0, 0%, 0%,0.92);
       --header-color:hsl(240, 3%, 11%);
       --block-color: hsl(240, 2%, 18%);
@@ -292,6 +293,7 @@ p.nav > a {
       --top-icon:url(../public/img/top.svg);
       --menu-icon:url(../public/img/menu.svg);
       --logo:url(../public/img/logo.webp);
+      --back:hsl(210, 10%, 96%);
       --background-color:hsl(210, 10%, 96%);
       --header-color:hsl(0, 0%, 100%);
       --block-color:hsl(220, 14%, 95%);
@@ -1249,7 +1251,22 @@ div.main__nav {
   -webkit-backdrop-filter: blur(10px);
   -moz-backdrop-filter: blur(10px);
   -o-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  
+  backdrop-filter: blur(10px); 
 }
-
+div#globalLoader {
+  position: fixed;
+  z-index: 8999;
+  top: 50%;
+  left: 50%;
+  background-color: #fff;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+div#globalLoader > img {
+  width:200px;
+  height:auto;
+}
