--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1253,33 +1253,26 @@ div.main__nav {
   -o-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px); 
 }
-@media all and (display-mode: standalone) {
+@media not all and (display-mode: standalone) {
   div#globalLoader {
-    display: block;
+    position: fixed;
+    z-index: 8999;
+    top: 50%;
+    left: 50%;
+    background-color: var(--nav_block);
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
   }
   div#globalLoader > div {
-    display: block;
-  }
-    
-}
-div#globalLoader {
-  position: fixed;
-  z-index: 8999;
-  top: 50%;
-  left: 50%;
-  background-color: var(--nav_block);
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-}
-div#globalLoader > div {
-  position: relative;
-  background-image: var(--logo);
-  background-size:200px 57.4px;
-  width:200px;
-  height:57.4px;
-  z-index: 9000;
+    position: relative;
+    background-image: var(--logo);
+    background-size:200px 57.4px;
+    width:200px;
+    height:57.4px;
+    z-index: 9000;
+  } 
 }
