--- a/styles/health/index.module.css
+++ b/styles/health/index.module.css
@@ -67,7 +67,7 @@ div.calendar_row {
     display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap:16px;
+    gap:24px 16px;
     margin:64px 0;
 }
 div.calendar_block {
@@ -89,11 +89,59 @@ div.calendar_block {
             align-items: center;
     margin:0 auto
 }
+div.calendar_block_l {
+    z-index:1;
+}
+div.calendar_block_loader {
+    position: relative;
+    width:100%;
+    height:80px;
+    background-color: var(--block-color);
+    -webkit-border-radius: 24px;
+       -moz-border-radius: 24px;
+            border-radius: 24px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin:0 auto;
+    overflow: hidden;
+}
+div.calendar_block_loader::before {
+    content:"";
+    position: absolute;
+    width:100%;
+    height:60px;
+    background:linear-gradient(#00ccff,#d500f9);
+    animation: rotate 4s linear infinite;
+}
+div.calendar_block_loader::after {
+    content:"";
+    position: absolute;
+    background:var(--block-color);
+    inset: 3px;
+    border-radius: 16px;
+}
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    } 
+    to {
+        transform: rotate(360deg);
+    }
+}
 div.calendar_block_emoji {
     width:48px;
     height:48px;
     position: relative;
-    margin: 0 16px
+    margin: 0 16px;
+    z-index:1;
 }
 div.calendar__planner {
     display: -webkit-box;
@@ -102,6 +150,7 @@ div.calendar__planner {
     display: -ms-flexbox;
     display: flex;
     margin:0 auto;
+    z-index:1;
 }
 div.calendar__day {
     border-right:1.5px solid var(--block-color);
